Resize matchup label so element fits size of text. Add height property of 90px to chardiv to ensure it doesn't resize when showing matchuplabel. Needs testing on different screen sizes to ensure layout spacing is consistent

--- a/styles/style.css
+++ b/styles/style.css
@@ -145,6 +145,7 @@ body {
 
 .CharDiv {
 	margin-top: 10px;
+	height: 90px;
 }
 
 .CharButton {
@@ -188,8 +189,10 @@ body {
 .MatchupLabel {
 	display: block;
 	position: relative;
-	bottom: 20px;
-	right: -40px;
+	width: 20px;
+	height: 25px;
+	bottom: 25px;
+	left: 85%;
 	color: white;
 	font-size: 20px;
 }
